Fix footer hover position to ensure full visibility of the footer

--- a/static/stylesheet_privacy.css
+++ b/static/stylesheet_privacy.css
@@ -172,7 +172,7 @@ body {
 }
 
 .footer:hover {
-    bottom: 20; /* Zeigt den gesamten Footer an */
+    bottom: 0; /* Zeigt den gesamten Footer an */
 }
 
 .footer .footer-bar {
